--- a/Human Experiments/Data Generation.ipynb
+++ b/Human Experiments/Data Generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,31 +13,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "# seed random number generator\n",
-    "def seed_generator():\n",
+    "def seed_generator(length, price, traj=1):\n",
     "\n",
-    "    placeholder_scaling = np.random.normal(15, 5)\n",
-    "    if placeholder_scaling < 3:\n",
-    "        scaling = 3\n",
-    "    else: scaling = placeholder_scaling\n",
+    "    placeholder_sigma = np.random.normal(price/10,5)\n",
+    "    if placeholder_sigma < 5:\n",
+    "        sigma = 5\n",
+    "    else: sigma = placeholder_sigma\n",
     "    \n",
-    "    placeholder_lamda = np.random.normal(7.5,3)\n",
-    "    if placeholder_lamda < 1:\n",
-    "        lamda = 1\n",
-    "    else: lamda = placeholder_lamda\n",
+    "    placeholder_mu = np.random.normal(price,price/20)\n",
+    "    if placeholder_mu < 100:\n",
+    "        mu = 100\n",
+    "    else: mu = placeholder_mu\n",
     "    \n",
-    "    placeholder_trajectory_length = np.round(np.random.normal(45,10))\n",
-    "    if placeholder_trajectory_length > 60:\n",
-    "        trajectory_length = 60\n",
-    "    elif placeholder_trajectory_length < 30:\n",
-    "            trajectory_length = 30\n",
-    "    else: trajectory_length = placeholder_trajectory_length\n",
+    "    if traj == 1:\n",
+    "        placeholder_trajectory_length = np.round(np.random.normal(0.75*length,10))\n",
+    "        if placeholder_trajectory_length > length:\n",
+    "            trajectory_length = length\n",
+    "        elif placeholder_trajectory_length < 0.5*length:\n",
+    "                trajectory_length = 30\n",
+    "        else: trajectory_length = placeholder_trajectory_length\n",
+    "    else: trajectory_length = length\n",
     "    \n",
-    "    start_max = 60-trajectory_length\n",
+    "    start_max = length-trajectory_length\n",
     "    placeholder_start_date = np.round(np.random.normal((start_max)/2, (start_max)/6))\n",
     "    if placeholder_start_date > start_max:\n",
     "        start_date = start_max\n",
@@ -45,20 +47,19 @@
     "            start_date = 0\n",
     "    else: start_date = placeholder_start_date\n",
     "    \n",
-    "#     print(scaling, lamda, trajectory_length, start_date)\n",
-    "    return(scaling, int(lamda), int(trajectory_length), int(start_date))"
+    "    return(int(sigma), int(mu), int(trajectory_length), int(start_date))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "# generate one trajectory\n",
-    "def generate_trajectory():\n",
-    "    scaling, lamda, trajectory_length, start_date = seed_generator()\n",
-    "    placeholder_value = np.round(scaling * np.random.poisson(lamda, trajectory_length))\n",
+    "def generate_trajectory(length, price, traj = 1):\n",
+    "    sigma, mu, trajectory_length, start_date = seed_generator(length, price, traj)\n",
+    "    placeholder_value = np.round(np.random.normal(mu, sigma, trajectory_length))\n",
     "    \n",
     "#     count, bins, ignored = plt.hist(placeholder_value, 30, density=True)\n",
     "#     plt.plot(bins, 1/(sigma * np.sqrt(2 * np.pi)) *\n",
@@ -66,7 +67,7 @@
     "#              linewidth=2, color='r')\n",
     "#     plt.show()\n",
     "    \n",
-    "    values = np.zeros(60)\n",
+    "    values = np.zeros(length)\n",
     "    for i in range(trajectory_length):\n",
     "        values[i+start_date] = placeholder_value[i]\n",
     "        \n",
@@ -75,18 +76,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trajectories = []\n",
-    "for i in range(5000):\n",
-    "    trajectories.append(generate_trajectory())\n",
+    "filenames = [(\"RL_trajectories_250.pickle\",250), (\"RL_trajectories_150.pickle\",150), (\"RL_trajectories_500.pickle\",500)]\n",
+    "for file_name,price in filenames:\n",
+    "    RL_trajectories = []\n",
+    "    for i in range(5000):\n",
+    "        RL_trajectories.append(generate_trajectory(60, price, 1))\n",
     "\n",
-    "file_Name = \"trajectories.pickle\"\n",
-    "fileObject = open(file_Name,'wb') \n",
-    "pickle.dump(trajectories,fileObject)  \n",
-    "fileObject.close()"
+    "    fileObject = open(file_name,'wb') \n",
+    "    pickle.dump(RL_trajectories,fileObject)  \n",
+    "    fileObject.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filenames = [(\"Human_trajectories_250.pickle\",250), (\"Human_trajectories_150.pickle\",150), (\"Human_trajectories_500.pickle\",500)]\n",
+    "for file_name,price in filenames:\n",
+    "    human_trajectories = []\n",
+    "    for i in range(120):\n",
+    "        human_trajectories.append(generate_trajectory(15, price, 2))\n",
+    "\n",
+    "    fileObject = open(file_name,'wb') \n",
+    "    pickle.dump(human_trajectories,fileObject)  \n",
+    "    fileObject.close()"
    ]
   },
   {
