--- a/Human Experiments/Data Generation.ipynb
+++ b/Human Experiments/Data Generation.ipynb
@@ -76,11 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filenames = [(\"RL_trajectories_250.pickle\",250), (\"RL_trajectories_150.pickle\",150), (\"RL_trajectories_500.pickle\",500)]\n",
+    "filenames = [(\"Data/RL_trajectories_150.pickle\",150), (\"Data/RL_trajectories_250.pickle\",250), \n",
+    "             (\"Data/RL_trajectories_350.pickle\",350), (\"Data/RL_trajectories_500.pickle\",500),\n",
+    "             (\"Data/RL_trajectories_700.pickle\",700),]\n",
     "for file_name,price in filenames:\n",
     "    RL_trajectories = []\n",
     "    for i in range(5000):\n",
@@ -93,12 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filenames = [(\"Human_trajectories_250.pickle\",250), (\"Human_trajectories_150.pickle\",150), (\"Human_trajectories_500.pickle\",500)]\n",
-    "for file_name,price in filenames:\n",
+    "filenames = [(\"Data/RL_trajectories_150.pickle\",150), (\"Data/RL_trajectories_250.pickle\",250), \n",
+    "             (\"Data/RL_trajectories_350.pickle\",350), (\"Data/RL_trajectories_500.pickle\",500),\n",
+    "             (\"Data/RL_trajectories_700.pickle\",700),]for file_name,price in filenames:\n",
     "    human_trajectories = []\n",
     "    for i in range(120):\n",
     "        human_trajectories.append(generate_trajectory(15, price, 2))\n",
