--- a/Human Experiments/Human Trials.ipynb
+++ b/Human Experiments/Human Trials.ipynb
@@ -2,6 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import clear_output\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[127, 500, 210]\n"
+     ]
+    }
+   ],
+   "source": [
+    "trials = [[234, 123, 210, 125, 127], [500, 123, 210, 125, 127], [234, 123, 210, 125, 127]]\n",
+    "selected = []\n",
+    "\n",
+    "for trial in trials:\n",
+    "    for i in range(len(trial)):\n",
+    "        print(trial[i])\n",
+    "        halt = input('Halt (y)')\n",
+    "        if halt == 'y' or i == len(trial)-1:\n",
+    "            selected.append(trial[i])\n",
+    "            j += 1\n",
+    "            break\n",
+    "        else:\n",
+    "            continue\n",
+    "    clear_output()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -10,9 +50,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "FAST_AI",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "fastai"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -24,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
