--- a/Human Experiments/Data Generation.ipynb
+++ b/Human Experiments/Data Generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,15 +95,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filenames = [(\"Data/RL_trajectories_150.pickle\",150), (\"Data/RL_trajectories_250.pickle\",250), \n",
-    "             (\"Data/RL_trajectories_350.pickle\",350), (\"Data/RL_trajectories_500.pickle\",500),\n",
-    "             (\"Data/RL_trajectories_700.pickle\",700),]for file_name,price in filenames:\n",
+    "filenames = [(\"Data/Human_trajectories_150.pickle\",150), (\"Data/Human_trajectories_250.pickle\",250), \n",
+    "             (\"Data/Human_trajectories_350.pickle\",350), (\"Data/Human_trajectories_500.pickle\",500),\n",
+    "             (\"Data/Human_trajectories_700.pickle\",700),]\n",
+    "for file_name,price in filenames:\n",
     "    human_trajectories = []\n",
-    "    for i in range(120):\n",
+    "    for i in range(35):\n",
     "        human_trajectories.append(generate_trajectory(15, price, 2))\n",
     "\n",
     "    fileObject = open(file_name,'wb') \n",
