--- a/Human Experiments/Human Trials.ipynb
+++ b/Human Experiments/Human Trials.ipynb
@@ -2,42 +2,79 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.display import clear_output\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pickle\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[127, 500, 210]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "trials = [[234, 123, 210, 125, 127], [500, 123, 210, 125, 127], [234, 123, 210, 125, 127]]\n",
-    "selected = []\n",
+    "filenames = [(\"Data/Human_trajectories_150.pickle\",150), (\"Data/Human_trajectories_250.pickle\",250), \n",
+    "             (\"Data/Human_trajectories_350.pickle\",350), (\"Data/Human_trajectories_500.pickle\",500),\n",
+    "             (\"Data/Human_trajectories_700.pickle\",700),]\n",
     "\n",
-    "for trial in trials:\n",
-    "    for i in range(len(trial)):\n",
-    "        print(trial[i])\n",
-    "        halt = input('Halt (y)')\n",
-    "        if halt == 'y' or i == len(trial)-1:\n",
-    "            selected.append(trial[i])\n",
+    "all_selected = []\n",
+    "\n",
+    "for file_name, price in filenames:\n",
+    "    selected = []\n",
+    "    fileObject = open(file_name,'rb')  \n",
+    "    trials = pickle.load(fileObject)\n",
+    "    current = []\n",
+    "    j = 0\n",
+    "\n",
+    "    for trial in trials:\n",
+    "        if j <= 15:\n",
+    "            print(\"Flight costs: \",trial)\n",
+    "            print(\"Minimum cost across trial: \", min(trial), \" At Index: \", np.where(trial == min(trial))[0]+1)\n",
+    "            current.extend(trial)\n",
     "            j += 1\n",
-    "            break\n",
+    "            start = input('Next test')\n",
+    "            if start == 'y':\n",
+    "                clear_output()\n",
+    "            else:\n",
+    "                clear_output()\n",
     "        else:\n",
-    "            continue\n",
-    "    clear_output()"
+    "            print(\"Next Trajectory:\")\n",
+    "            for i in range(len(trial)):\n",
+    "                print(trial[i])\n",
+    "                halt = input('Halt (y)')\n",
+    "                if halt == 'y' or i == len(trial)-1:\n",
+    "                    selected.append(trial[i])\n",
+    "                    j += 1\n",
+    "                    print(\"The Minimum cost across trial was: \", min(trial))\n",
+    "                    break\n",
+    "                else:\n",
+    "                    continue\n",
+    "            clear_output()\n",
+    "\n",
+    "        if j == 15:\n",
+    "            plt.hist(current, density=True, bins=50)\n",
+    "            plt.xlabel('Cost of ticket')\n",
+    "            plt.ylabel('Probability')\n",
+    "            plt.show()\n",
+    "            j += 1\n",
+    "            start = input('Start trials (y)')\n",
+    "            if start == 'y':\n",
+    "                clear_output()\n",
+    "            else:\n",
+    "                clear_output()\n",
+    "                \n",
+    "    all_selected.append(selected)\n",
+    "    fileObject.close()\n",
+    "\n",
+    "file_Name = \"test_1\"\n",
+    "fileObject = open(file_Name,'wb') \n",
+    "pickle.dump(all_selected,fileObject)   \n",
+    "fileObject.close()"
    ]
   },
   {
