Final Data Generation

--- a/Human Experiments/Data Generation.ipynb
+++ b/Human Experiments/Data Generation.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,6 +60,9 @@
     "def generate_trajectory(length, price, traj = 1):\n",
     "    sigma, mu, trajectory_length, start_date = seed_generator(length, price, traj)\n",
     "    placeholder_value = np.round(np.random.normal(mu, sigma, trajectory_length))\n",
+    "    x = np.where(placeholder_value == min(placeholder_value))[0]\n",
+    "    for i in range (1, len(x)):\n",
+    "        placeholder_value[x[i]] += 5*i\n",
     "    \n",
     "#     count, bins, ignored = plt.hist(placeholder_value, 30, density=True)\n",
     "#     plt.plot(bins, 1/(sigma * np.sqrt(2 * np.pi)) *\n",
@@ -76,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
