--- a/Human Experiments/Human Trials.ipynb
+++ b/Human Experiments/Human Trials.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating minima . . .\n",
+      "Task accomplished!\n"
+     ]
+    }
+   ],
+   "source": [
+    "filenames = [(\"Data/Human_trajectories_150.pickle\",150), (\"Data/Human_trajectories_250.pickle\",250), \n",
+    "             (\"Data/Human_trajectories_350.pickle\",350), (\"Data/Human_trajectories_500.pickle\",500),\n",
+    "             (\"Data/Human_trajectories_700.pickle\",700),]\n",
+    "\n",
+    "all_minima = []\n",
+    "\n",
+    "print(\"Calculating minima . . .\")\n",
+    "\n",
+    "for file_name, price in filenames:\n",
+    "    minima = []\n",
+    "    fileObject = open(file_name,'rb')  \n",
+    "    trials = pickle.load(fileObject)\n",
+    "    \n",
+    "    for trial in trials:\n",
+    "        x = int(np.where(trial == min(trial))[0])\n",
+    "        minima.append((min(trial), x))\n",
+    "    \n",
+    "    all_minima.append(minima)\n",
+    "    fileObject.close()\n",
+    "\n",
+    "file_Name = \"Tests/Human_minimum.pickle\"\n",
+    "fileObject = open(file_Name,'wb') \n",
+    "pickle.dump(all_minima,fileObject)   \n",
+    "fileObject.close()\n",
+    "print(\"Task accomplished!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,9 +90,10 @@
     "                print(trial[i])\n",
     "                halt = input('Halt (y)')\n",
     "                if halt == 'y' or i == len(trial)-1:\n",
-    "                    selected.append(trial[i])\n",
+    "                    selected.append((trial[i],i))\n",
     "                    j += 1\n",
     "                    print(\"The Minimum cost across trial was: \", min(trial))\n",
+    "                    cont = input('Next trial (y)')\n",
     "                    break\n",
     "                else:\n",
     "                    continue\n",
@@ -71,7 +114,7 @@
     "    all_selected.append(selected)\n",
     "    fileObject.close()\n",
     "\n",
-    "file_Name = \"test_1\"\n",
+    "file_Name = \"Tests/test_2\"\n",
     "fileObject = open(file_Name,'wb') \n",
     "pickle.dump(all_selected,fileObject)   \n",
     "fileObject.close()"
@@ -79,10 +122,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(all_selected[0]))"
+   ]
   }
  ],
  "metadata": {
