Final Data Generation

--- a/Human Experiments/Data Generation.ipynb
+++ b/Human Experiments/Data Generation.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,16 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filenames = [(\"Data/RL_trajectories_150.pickle\",150), (\"Data/RL_trajectories_250.pickle\",250), \n",
-    "             (\"Data/RL_trajectories_350.pickle\",350), (\"Data/RL_trajectories_500.pickle\",500),\n",
-    "             (\"Data/RL_trajectories_700.pickle\",700),]\n",
+    "filenames = [(\"Data/RL_trajectories_250.pickle\",250), (\"Data/RL_trajectories_500.pickle\",500)]\n",
     "for file_name,price in filenames:\n",
     "    RL_trajectories = []\n",
-    "    for i in range(5000):\n",
+    "    for i in range(10000):\n",
     "        RL_trajectories.append(generate_trajectory(60, price, 1))\n",
     "\n",
     "    fileObject = open(file_name,'wb') \n",
@@ -98,16 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filenames = [(\"Data/Human_trajectories_150.pickle\",150), (\"Data/Human_trajectories_250.pickle\",250), \n",
-    "             (\"Data/Human_trajectories_350.pickle\",350), (\"Data/Human_trajectories_500.pickle\",500),\n",
-    "             (\"Data/Human_trajectories_700.pickle\",700),]\n",
+    "filenames = [(\"Data/Human_trajectories_250.pickle\",250), (\"Data/Human_trajectories_500.pickle\",500)]\n",
     "for file_name,price in filenames:\n",
     "    human_trajectories = []\n",
-    "    for i in range(35):\n",
+    "    for i in range(75):\n",
     "        human_trajectories.append(generate_trajectory(15, price, 2))\n",
     "\n",
     "    fileObject = open(file_name,'wb') \n",
