--- a/Human Experiments/Human Trials.ipynb
+++ b/Human Experiments/Human Trials.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -27,9 +27,7 @@
     }
    ],
    "source": [
-    "filenames = [(\"Data/Human_trajectories_150.pickle\",150), (\"Data/Human_trajectories_250.pickle\",250), \n",
-    "             (\"Data/Human_trajectories_350.pickle\",350), (\"Data/Human_trajectories_500.pickle\",500),\n",
-    "             (\"Data/Human_trajectories_700.pickle\",700),]\n",
+    "filenames = [(\"Data/Human_trajectories_250.pickle\",250), (\"Data/Human_trajectories_500.pickle\",500)]\n",
     "\n",
     "all_minima = []\n",
     "\n",
@@ -60,9 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filenames = [(\"Data/Human_trajectories_150.pickle\",150), (\"Data/Human_trajectories_250.pickle\",250), \n",
-    "             (\"Data/Human_trajectories_350.pickle\",350), (\"Data/Human_trajectories_500.pickle\",500),\n",
-    "             (\"Data/Human_trajectories_700.pickle\",700),]\n",
+    "filenames = [(\"Data/Human_trajectories_250.pickle\",250), (\"Data/Human_trajectories_500.pickle\",500)]\n",
     "\n",
     "all_selected = []\n",
     "\n",
@@ -74,7 +70,7 @@
     "    j = 0\n",
     "\n",
     "    for trial in trials:\n",
-    "        if j <= 15:\n",
+    "        if j <= 25:\n",
     "            print(\"Flight costs: \",trial)\n",
     "            print(\"Minimum cost across trial: \", min(trial), \" At Index: \", np.where(trial == min(trial))[0]+1)\n",
     "            current.extend(trial)\n",
@@ -99,7 +95,7 @@
     "                    continue\n",
     "            clear_output()\n",
     "\n",
-    "        if j == 15:\n",
+    "        if j == 25:\n",
     "            plt.hist(current, density=True, bins=50)\n",
     "            plt.xlabel('Cost of ticket')\n",
     "            plt.ylabel('Probability')\n",
