--- a/Human Experiments/Human Trials.ipynb
+++ b/Human Experiments/Human Trials.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
     "    all_selected.append(selected)\n",
     "    fileObject.close()\n",
     "\n",
-    "file_Name = \"Tests/test_2\"\n",
+    "file_Name = \"Tests/test_4\"\n",
     "fileObject = open(file_Name,'wb') \n",
     "pickle.dump(all_selected,fileObject)   \n",
     "fileObject.close()"
@@ -118,20 +118,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20\n"
+      "[[(202.0, 5), (172.0, 4), (199.0, 13), (212.0, 10), (226.0, 0), (220.0, 13), (220.0, 4), (202.0, 13), (206.0, 7), (205.0, 10), (258.0, 14), (217.0, 9), (208.0, 14), (193.0, 4), (217.0, 1), (208.0, 3), (192.0, 7), (248.0, 14), (178.0, 6), (203.0, 2), (280.0, 14), (210.0, 13), (215.0, 0), (201.0, 2), (230.0, 12), (212.0, 0), (219.0, 5), (255.0, 14), (244.0, 6), (176.0, 2), (246.0, 10), (212.0, 8), (247.0, 14), (226.0, 6), (237.0, 13), (168.0, 5), (202.0, 3), (217.0, 3), (196.0, 0), (244.0, 14), (217.0, 5), (232.0, 3), (220.0, 4), (200.0, 4), (220.0, 14), (204.0, 0), (276.0, 14), (201.0, 14), (249.0, 14), (217.0, 4)], [(399.0, 2), (472.0, 8), (391.0, 2), (397.0, 1), (409.0, 5), (404.0, 4), (480.0, 12), (412.0, 8), (383.0, 12), (375.0, 4), (449.0, 12), (463.0, 13), (435.0, 2), (453.0, 6), (407.0, 5), (400.0, 3), (377.0, 4), (551.0, 14), (504.0, 7), (492.0, 5), (423.0, 9), (477.0, 4), (347.0, 0), (465.0, 6), (482.0, 10), (452.0, 6), (394.0, 4), (482.0, 7), (449.0, 6), (473.0, 8), (383.0, 5), (410.0, 7), (396.0, 13), (437.0, 4), (417.0, 5), (547.0, 14), (414.0, 4), (502.0, 9), (408.0, 5), (432.0, 4), (395.0, 0), (398.0, 1), (400.0, 10), (386.0, 8), (401.0, 1), (402.0, 4), (468.0, 8), (425.0, 12), (413.0, 6), (387.0, 3)]]\n"
      ]
     }
    ],
    "source": [
-    "print(len(all_selected[0]))"
+    "print(all_selected)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
