New Data Generated Evenly Distributed

--- a/Human Experiments/Data Generation.ipynb
+++ b/Human Experiments/Data Generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# generate one trajectory\n",
     "def generate_trajectory(length, price, traj = 1):\n",
     "    sigma, mu, trajectory_length, start_date = seed_generator(length, price, traj)\n",
-    "    placeholder_value = np.round(np.random.normal(mu, sigma, trajectory_length))\n",
+    "    placeholder_value = (np.round(np.random.normal(mu, sigma, trajectory_length)))\n",
     "    x = np.where(placeholder_value == min(placeholder_value))[0]\n",
     "    for i in range (1, len(x)):\n",
     "        placeholder_value[x[i]] += 5*i\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,8 +87,18 @@
     "for file_name,price in filenames:\n",
     "    RL_trajectories = []\n",
     "    for i in range(10000):\n",
-    "        RL_trajectories.append(generate_trajectory(15, price, 2))\n",
-    "\n",
+    "        nex = 0\n",
+    "        while nex != 1:\n",
+    "            new_traj = generate_trajectory(15, price, 2)\n",
+    "            minimum = int(np.where(new_traj == min(new_traj))[0])\n",
+    "            if minimum == i % 15:\n",
+    "                RL_trajectories.append(new_traj)\n",
+    "                nex = 1\n",
+    "            else:\n",
+    "                continue\n",
+    "    \n",
+    "    np.random.shuffle(RL_trajectories)\n",
+    "    \n",
     "    fileObject = open(file_name,'wb') \n",
     "    pickle.dump(RL_trajectories,fileObject)  \n",
     "    fileObject.close()"
@@ -96,27 +106,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filenames = [(\"Data/Human_trajectories_250_2.pickle\",250), (\"Data/Human_trajectories_500_2.pickle\",500)]\n",
+    "filenames = [(\"Data/Human_trajectories_train_250.pickle\",250), (\"Data/Human_trajectories_train_500.pickle\",500)]\n",
     "for file_name,price in filenames:\n",
     "    human_trajectories = []\n",
-    "    for i in range(75):\n",
-    "        human_trajectories.append(generate_trajectory(15, price, 2))\n",
+    "    for i in range(25):\n",
+    "        nex = 0\n",
+    "        while nex != 1:\n",
+    "            new_traj = generate_trajectory(15, price, 2)\n",
+    "            minimum = int(np.where(new_traj == min(new_traj))[0])\n",
+    "            if minimum == i % 15:\n",
+    "                human_trajectories.append(new_traj)\n",
+    "                nex = 1\n",
+    "            else:\n",
+    "                continue\n",
+    "    \n",
+    "    np.random.shuffle(human_trajectories)\n",
+    "\n",
+    "    fileObject = open(file_name,'wb') \n",
+    "    pickle.dump(human_trajectories,fileObject)  \n",
+    "    fileObject.close()\n",
+    "    \n",
+    "filenames = [(\"Data/Human_trajectories_test_250.pickle\",250), (\"Data/Human_trajectories_test_500.pickle\",500)]\n",
+    "for file_name,price in filenames:\n",
+    "    human_trajectories = []\n",
+    "    for i in range(60):\n",
+    "        nex = 0\n",
+    "        while nex != 1:\n",
+    "            new_traj = generate_trajectory(15, price, 2)\n",
+    "            minimum = int(np.where(new_traj == min(new_traj))[0])\n",
+    "            if minimum == i % 15:\n",
+    "                human_trajectories.append(new_traj)\n",
+    "                nex = 1\n",
+    "            else:\n",
+    "                continue\n",
+    "    \n",
+    "    np.random.shuffle(human_trajectories)\n",
     "\n",
     "    fileObject = open(file_name,'wb') \n",
     "    pickle.dump(human_trajectories,fileObject)  \n",
     "    fileObject.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
