--- a/Human Experiments/Data Generation.ipynb
+++ b/Human Experiments/Data Generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,12 +133,23 @@
     "filenames = [(\"Data/Human_trajectories_test_250.pickle\",250), (\"Data/Human_trajectories_test_500.pickle\",500)]\n",
     "for file_name,price in filenames:\n",
     "    human_trajectories = []\n",
-    "    for i in range(60):\n",
+    "    for i in range(40):\n",
     "        nex = 0\n",
     "        while nex != 1:\n",
     "            new_traj = generate_trajectory(15, price, 2)\n",
     "            minimum = int(np.where(new_traj == min(new_traj))[0])\n",
-    "            if minimum == i % 15:\n",
+    "            if minimum == 2*(i % 8):\n",
+    "                human_trajectories.append(new_traj)\n",
+    "                nex = 1\n",
+    "            else:\n",
+    "                continue\n",
+    "    \n",
+    "    for i in range(20):\n",
+    "        nex = 0\n",
+    "        while nex != 1:\n",
+    "            new_traj = generate_trajectory(15, price, 2)\n",
+    "            minimum = int(np.where(new_traj == min(new_traj))[0])\n",
+    "            if minimum == 2*(i % 7)+1:\n",
     "                human_trajectories.append(new_traj)\n",
     "                nex = 1\n",
     "            else:\n",
