New Data Generated Evenly Distributed

--- a/Human Experiments/Data Generation.ipynb
+++ b/Human Experiments/Data Generation.ipynb
@@ -138,7 +138,7 @@
     "        while nex != 1:\n",
     "            new_traj = generate_trajectory(15, price, 2)\n",
     "            minimum = int(np.where(new_traj == min(new_traj))[0])\n",
-    "            if minimum == 2*(i % 8):\n",
+    "            if minimum == 3*(i%5)+2:\n",
     "                human_trajectories.append(new_traj)\n",
     "                nex = 1\n",
     "            else:\n",
@@ -149,11 +149,18 @@
     "        while nex != 1:\n",
     "            new_traj = generate_trajectory(15, price, 2)\n",
     "            minimum = int(np.where(new_traj == min(new_traj))[0])\n",
-    "            if minimum == 2*(i % 7)+1:\n",
-    "                human_trajectories.append(new_traj)\n",
-    "                nex = 1\n",
+    "            if i%2 == 0:\n",
+    "                if minimum == 3*(i%5)+0:\n",
+    "                    human_trajectories.append(new_traj)\n",
+    "                    nex = 1\n",
+    "                else:\n",
+    "                    continue\n",
     "            else:\n",
-    "                continue\n",
+    "                if minimum == 3*(i%5)+1:\n",
+    "                    human_trajectories.append(new_traj)\n",
+    "                    nex = 1\n",
+    "                else:\n",
+    "                    continue\n",
     "    \n",
     "    np.random.shuffle(human_trajectories)\n",
     "\n",
@@ -161,6 +168,71 @@
     "    pickle.dump(human_trajectories,fileObject)  \n",
     "    fileObject.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n",
+      "4\n",
+      "3\n",
+      "7\n",
+      "6\n",
+      "10\n",
+      "9\n",
+      "13\n",
+      "12\n",
+      "1\n",
+      "0\n",
+      "4\n",
+      "3\n",
+      "7\n",
+      "6\n",
+      "10\n",
+      "9\n",
+      "13\n",
+      "12\n",
+      "1\n",
+      "0\n",
+      "4\n",
+      "3\n",
+      "7\n",
+      "6\n",
+      "10\n",
+      "9\n",
+      "13\n",
+      "12\n",
+      "1\n",
+      "0\n",
+      "4\n",
+      "3\n",
+      "7\n",
+      "6\n",
+      "10\n",
+      "9\n",
+      "13\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(20):\n",
+    "    print(3*(i%5)+1)\n",
+    "    print(3*(i%5)+0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
