Analyze Human Data

--- a/Human Experiments/Human Trials.ipynb
+++ b/Human Experiments/Human Trials.ipynb
@@ -67,13 +67,13 @@
     "                    break\n",
     "                else:\n",
     "                    continue\n",
-    "            clear_output()\n",
+    "            clear_output()y\n",
     "        all_selected.append(selected)\n",
     "    fileObject.close()\n",
     "\n",
     "print(\"Thank you very much for your time and patience!\")\n",
     "\n",
-    "file_Name = \"Tests/test_5\"\n",
+    "file_Name = \"Tests/test_2\"\n",
     "fileObject = open(file_Name,'wb') \n",
     "pickle.dump(all_selected,fileObject)   \n",
     "fileObject.close()"
@@ -84,9 +84,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(all_selected)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
