--- a/Human Experiments/Human Trials.ipynb
+++ b/Human Experiments/Human Trials.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,9 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thank you very much for your time and patience!\n"
+     ]
+    }
+   ],
    "source": [
     "filenames = [(\"Data/Human_trajectories_train_250.pickle\",250), (\"Data/Human_trajectories_test_250.pickle\",250),\n",
     "             (\"Data/Human_trajectories_train_500.pickle\",500), (\"Data/Human_trajectories_test_500.pickle\",500)]\n",
@@ -67,13 +75,13 @@
     "                    break\n",
     "                else:\n",
     "                    continue\n",
-    "            clear_output()y\n",
+    "            clear_output()\n",
     "        all_selected.append(selected)\n",
     "    fileObject.close()\n",
     "\n",
     "print(\"Thank you very much for your time and patience!\")\n",
     "\n",
-    "file_Name = \"Tests/test_2\"\n",
+    "file_Name = \"Tests/test_4\"\n",
     "fileObject = open(file_Name,'wb') \n",
     "pickle.dump(all_selected,fileObject)   \n",
     "fileObject.close()"
