Pickled the final output

--- a/Decision Trees/Decision_Trees_Human_Tests.ipynb
+++ b/Decision Trees/Decision_Trees_Human_Tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,15 +107,12 @@
     "dataframe_test_250 = pd.DataFrame(data_test_250, columns = ['trajectory_number','my_index' , 'price', 'label'])\n",
     "\n",
     "dataframe_train_500 = pd.DataFrame(data_train_500, columns = ['trajectory_number','my_index' , 'price', 'label'])\n",
-    "dataframe_test_500 = pd.DataFrame(data_test_500, columns = ['trajectory_number','my_index' , 'price', 'label'])\n",
-    "\n",
-    "\n",
-    "\n"
+    "dataframe_test_500 = pd.DataFrame(data_test_500, columns = ['trajectory_number','my_index' , 'price', 'label'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +162,7 @@
      "output_type": "stream",
      "text": [
       "Accuracy 250:  0.7877777777777778\n",
-      "Accuracy 500:  0.8344444444444444\n"
+      "Accuracy 500:  0.8355555555555556\n"
      ]
     }
    ],
@@ -179,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,8 +231,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {},
+   "execution_count": 183,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -243,13 +242,13 @@
        "[[(276.0, 14),\n",
        "  (240.0, 13),\n",
        "  (229.0, 13),\n",
-       "  (247.0, 10),\n",
+       "  (228.0, 0),\n",
        "  (213.0, 14),\n",
        "  (186.0, 4),\n",
        "  (265.0, 14),\n",
-       "  (226.0, 1),\n",
-       "  (192.0, 11),\n",
-       "  (277.0, 14),\n",
+       "  (299.0, 14),\n",
+       "  (232.0, 10),\n",
+       "  (231.0, 13),\n",
        "  (187.0, 0),\n",
        "  (229.0, 0),\n",
        "  (276.0, 14),\n",
@@ -259,12 +258,12 @@
        "  (287.0, 14),\n",
        "  (191.0, 2),\n",
        "  (287.0, 14),\n",
-       "  (204.0, 3),\n",
+       "  (225.0, 8),\n",
        "  (240.0, 3),\n",
-       "  (218.0, 4),\n",
+       "  (208.0, 9),\n",
        "  (257.0, 14),\n",
-       "  (218.0, 0),\n",
-       "  (218.0, 0),\n",
+       "  (221.0, 4),\n",
+       "  (185.0, 2),\n",
        "  (221.0, 8),\n",
        "  (224.0, 11),\n",
        "  (239.0, 3),\n",
@@ -272,15 +271,15 @@
        "  (287.0, 14),\n",
        "  (239.0, 3),\n",
        "  (226.0, 2),\n",
-       "  (226.0, 10),\n",
+       "  (224.0, 11),\n",
        "  (226.0, 12),\n",
        "  (227.0, 2),\n",
        "  (219.0, 14),\n",
        "  (253.0, 7),\n",
-       "  (201.0, 14),\n",
+       "  (220.0, 1),\n",
        "  (203.0, 1),\n",
        "  (279.0, 14),\n",
-       "  (262.0, 14),\n",
+       "  (233.0, 13),\n",
        "  (215.0, 1),\n",
        "  (241.0, 4),\n",
        "  (209.0, 9),\n",
@@ -306,7 +305,7 @@
        "  (404.0, 4),\n",
        "  (417.0, 4),\n",
        "  (478.0, 14),\n",
-       "  (483.0, 10),\n",
+       "  (415.0, 11),\n",
        "  (422.0, 11),\n",
        "  (411.0, 2),\n",
        "  (410.0, 9),\n",
@@ -325,16 +324,16 @@
        "  (389.0, 1),\n",
        "  (422.0, 4),\n",
        "  (425.0, 11),\n",
-       "  (428.0, 11),\n",
+       "  (473.0, 10),\n",
        "  (430.0, 14),\n",
-       "  (406.0, 14),\n",
+       "  (473.0, 9),\n",
        "  (427.0, 3),\n",
        "  (425.0, 14),\n",
        "  (519.0, 14),\n",
        "  (437.0, 12),\n",
        "  (466.0, 0),\n",
        "  (411.0, 7),\n",
-       "  (436.0, 14),\n",
+       "  (438.0, 6),\n",
        "  (335.0, 0),\n",
        "  (412.0, 0),\n",
        "  (371.0, 1),\n",
@@ -362,7 +361,7 @@
        "  (458.0, 8)]]"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,10 +372,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "final_output_file_name = \"final_output_decision_tree.pickle\"\n",
+    "final_file_object = open(final_output_file_name, 'wb')\n",
+    "pickle.dump(final_output, final_file_object)\n",
+    "final_file_object.close()"
+   ]
   }
  ],
  "metadata": {
