--- a/Human Experiments/Human Trials.ipynb
+++ b/Human Experiments/Human Trials.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,14 +14,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thank you very much for your time and patience!\n"
+      "Next Trajectory:\n",
+      "504.0\n",
+      "Halt (y)\n",
+      "487.0\n",
+      "Halt (y)\n",
+      "453.0\n",
+      "Halt (y)\n",
+      "555.0\n",
+      "Halt (y)\n",
+      "510.0\n",
+      "Halt (y)\n",
+      "455.0\n"
      ]
     }
    ],
