--- a/Human Experiments/Human Trials.ipynb
+++ b/Human Experiments/Human Trials.ipynb
@@ -14,25 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Next Trajectory:\n",
-      "504.0\n",
-      "Halt (y)\n",
-      "487.0\n",
-      "Halt (y)\n",
-      "453.0\n",
-      "Halt (y)\n",
-      "555.0\n",
-      "Halt (y)\n",
-      "510.0\n",
-      "Halt (y)\n",
-      "455.0\n"
+      "Thank you very much for your time and patience!\n"
      ]
     }
    ],
