--- a/Human Experiments/Analyze_Tests.ipynb
+++ b/Human Experiments/Analyze_Tests.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
     "    for dataitem in data:\n",
     "        y_pos = np.arange(len(dataitem[0]))\n",
     "        j += 1\n",
-    "        plt.subplot(1, 2, j)\n",
+    "        ax1 = plt.subplot(1, 2, j)\n",
     "        plt.subplots_adjust(wspace=0.30, hspace=0.20)\n",
     "        plt.plot(y_pos, dataitem[0], 'ko-', label='Human Avg')\n",
     "        plt.plot(y_pos, dataitem[1], 'ro--', label='Basic RL')\n",
@@ -38,6 +38,7 @@
     "        plt.plot(y_pos, dataitem[3], 'go-.', label='Random Forest')\n",
     "        plt.legend(loc='upper right')\n",
     "        if ylm: plt.ylim([0,1])\n",
+    "#         else: plt.ylim([0,12])\n",
     "        plt.title(subtitle+\" (250)\" if j==0 else subtitle+\" (500)\")\n",
     "        if tcks: plt.xticks(np.arange(5), ('3', '6', '9', '12', '15'))\n",
     "        plt.xlabel(\"Position\")\n",
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "metadata": {
     "scrolled": false
    },
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 68,
    "metadata": {
     "scrolled": false
    },
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 69,
    "metadata": {
     "scrolled": false
    },
