--- a/RL/Old_Sample Efficient Complex Policy.ipynb
+++ b/RL/Old_Sample Efficient Complex Policy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,25 +62,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "policies = generate_policies(150, 350)"
+    "def generate_policies_two_split(price_low_bound, price_upper_bound, step_size):\n",
+    "    policies = []\n",
+    "    for i in range(price_low_bound, price_upper_bound, step_size):\n",
+    "        for j in range(price_low_bound, price_upper_bound, step_size):\n",
+    "            for k in range(8):\n",
+    "                for l in range(7):\n",
+    "                    policy = (i, j, k, l)\n",
+    "                    policies.append(policy)\n",
+    "    return policies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "policies = generate_policies_two_split(320, 530, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1000000"
+       "98784"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +157,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_policy_two_split(policy, data, best_buys):\n",
+    "    bought = []\n",
+    "    bought_cost_only = []\n",
+    "    t1 = policy[0]\n",
+    "    t2 = policy[1]\n",
+    "    d1 = policy[2]\n",
+    "    d2 = policy[3]\n",
+    "    for trajectory in data:\n",
+    "        for idx, cost in enumerate(trajectory):\n",
+    "            if (idx<8):\n",
+    "                local_idx = idx\n",
+    "            else:\n",
+    "                local_idx = idx-8\n",
+    "            if(idx == len(trajectory) - 1):\n",
+    "                bought.append((cost, idx))\n",
+    "                bought_cost_only.append(cost)\n",
+    "                break\n",
+    "            elif(idx < 8):\n",
+    "                if(cost > t1 and local_idx < d1):\n",
+    "                    continue\n",
+    "                else: \n",
+    "                    bought.append((cost, idx))\n",
+    "                    bought_cost_only.append(cost)\n",
+    "                    break\n",
+    "            elif(idx >= 8):\n",
+    "                if(cost > t2 and local_idx < d2):\n",
+    "                    continue\n",
+    "                else: \n",
+    "                    bought.append((cost, idx))\n",
+    "                    bought_cost_only.append(cost)\n",
+    "                    break\n",
+    "            \n",
+    "    error = [a_i - b_i for a_i, b_i in zip(bought_cost_only, best_buys)]    \n",
+    "    avg_error = sum(error)/len(data)\n",
+    "    return avg_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +232,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26.0888"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate_policy_two_split((210, 230, 7, 3), trajectories_train_250, best_buy_250_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,26 +264,72 @@
     "        sys.stdout.flush()\n",
     "        sys.stdout.write(\"\\rProgress: {}/{}\".format(idx, len(all_policies)))\n",
     "        all_errors.append(policy_avg_error)\n",
-    "    return(min(all_errors), all_policies[index(min(all_errors))])"
+    "    return(min(all_errors), all_policies[all_policies.index(min(all_errors))])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def policy_search_two_split(price_low_bound, price_upper_bound, data, best_buys):\n",
+    "    all_errors = []\n",
+    "    all_policies = generate_policies_two_split(price_low_bound, price_upper_bound, 5)\n",
+    "    for idx, policy in enumerate(all_policies):\n",
+    "        policy_avg_error = evaluate_policy_two_split(policy, data, best_buys)\n",
+    "        sys.stdout.flush()\n",
+    "        sys.stdout.write(\"\\rProgress: {}/{}\".format(idx+1, len(all_policies)))\n",
+    "        all_errors.append(policy_avg_error)\n",
+    "    return(min(all_errors), all_policies[all_errors.index(min(all_errors))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {
     "scrolled": false
    },
+   "outputs": [],
+   "source": [
+    "# optimal_policy = policy_search(160, 260, trajectories_train_250, best_buy_250_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Progress: 19211/125000"
+      "Progress: 98784/98784"
      ]
     }
    ],
    "source": [
-    "optimal_policy = policy_search(160, 260, trajectories_train_250, best_buy_250_train)"
+    "optimal_policy_500 = policy_search_two_split(320, 530, trajectories_train_500, best_buy_500_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(38.1196, (465, 320, 7, 0))"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "optimal_policy_500"
    ]
   },
   {
@@ -230,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
